--- a/app/src/main/res/layout/content_setup.xml
+++ b/app/src/main/res/layout/content_setup.xml
@@ -9,11 +9,11 @@
     tools:context="com.example.wquist.goshnaairlines.SetupActivity"
     tools:showIn="@layout/activity_setup">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -171,14 +171,14 @@
                 app:layout_constraintStart_toEndOf="@+id/barrier"
                 app:layout_constraintTop_toBottomOf="@+id/flight_number" />
 
-            <android.support.constraint.Barrier
+            <androidx.constraintlayout.widget.Barrier
                 android:id="@+id/barrier"
                 android:layout_width="1dp"
                 android:layout_height="300dp"
                 app:barrierDirection="right"
                 app:constraint_referenced_ids="textView2,textView3,textView4,textView5,textView6">
 
-            </android.support.constraint.Barrier>
+            </androidx.constraintlayout.widget.Barrier>
 
             <Button
                 android:id="@+id/submit"
@@ -194,9 +194,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:layout_width="wrap_content"
